[package]
name = "gitgraph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
structopt = "0.3.23"
dunce = "1.0.2"
git2 = { version = "0.13.22" }
anyhow = "1.0.13"
regex = "1.5"
handlebars = "4.1.0"
serde_json = "1.0.64"
serde = "1"
