[package]
name = "gitgraph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "3"
# actix-files = "0.5.0"
structopt = "0.3.23"
dunce = "1.0.2"
git2 = { version = "0.13.22" }
anyhow = "1.0.13"
regex = "1.5"
serde_json = "1.0.64"
serde = { version = "1", features = ["derive"] }
rand = "0.8.4"
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"

[build-dependencies]
npm_rs = "0.2.1"
